syntax = "proto3";
package DomainServices.ProductService.v1;
option csharp_namespace = "DomainServices.ProductService.Contracts.v1";

import "google/protobuf/empty.proto";
import "Messages/GetProductList.proto";
import "Messages/GetProductObligationList.proto";
import "Messages/GetMortgage.proto";
import "Messages/CreateMortgage.proto";
import "Messages/UpdateMortgage.proto";
import "Messages/CreateContractRelationship.proto";
import "Messages/DeleteContractRelationship.proto";
import "Messages/GetCustomersOnProduct.proto";
import "Messages/GetCaseId.proto";
import "Messages/GetCovenantDetail.proto";
import "Messages/GetCovenantList.proto";
import "Messages/CancelMortgage.proto";
import "Messages/SearchProducts.proto";
import "Messages/UpdateMortgagePcpId.proto";

service ProductService {
   rpc GetProductList (GetProductListRequest) returns (GetProductListResponse);
   
   rpc GetProductObligationList (GetProductObligationListRequest) returns (GetProductObligationListResponse);
   
   rpc GetMortgage (GetMortgageRequest) returns (GetMortgageResponse);
   
   rpc CreateMortgage (CreateMortgageRequest) returns (CreateMortgageResponse);
   
   rpc UpdateMortgage (UpdateMortgageRequest) returns (google.protobuf.Empty);
   
   rpc CreateContractRelationship (CreateContractRelationshipRequest) returns (google.protobuf.Empty);
   
   rpc DeleteContractRelationship (DeleteContractRelationshipRequest) returns (google.protobuf.Empty);
   
   rpc GetCustomersOnProduct (GetCustomersOnProductRequest) returns (GetCustomersOnProductResponse);

   rpc GetCaseId (GetCaseIdRequest) returns (GetCaseIdResponse);
   
   rpc GetCovenantDetail (GetCovenantDetailRequest) returns (GetCovenantDetailResponse);
   
   rpc GetCovenantList (GetCovenantListRequest) returns (GetCovenantListResponse);

   rpc CancelMortgage (CancelMortgageRequest) returns (google.protobuf.Empty);

   rpc SearchProducts (SearchProductsRequest) returns (SearchProductsResponse);

   rpc UpdateMortgagePcpId (UpdateMortgagePcpIdRequest) returns (UpdateMortgagePcpIdResponse);
}